# uniffi-example

./: .gitignore  Cargo.toml  README.md  generate.sh  test.sh
bindings/: Cargo.toml
bindings-simple/: Cargo.toml  build.rs  uniffi.toml
bindings-simple/src/: add.rs  error.rs  lib.rs  person.rs  pet.rs  simple.udl  test_enum.rs
bindings-simple/src/udl/: namespace.udl  person.udl  pet.udl  test_enum.udl
bindings-simple/tests/: test_generated_bindings.rs
bindings-simple/tests/kotlin/: test.kts
bindings-simple/tests/python/: test.py
bindings-simple/tests/ruby/: test.rb
bindings-simple/tests/swift/: test.swift
bindings-vectors/: Cargo.toml  build.rs  uniffi.toml
bindings-vectors/src/: lib.rs  vectors.udl
bindings-vectors/tests/: test_generated_bindings.rs
bindings-vectors/tests/kotlin/: test.kts
simple/: Cargo.toml
simple/src/: lib.rs
vectors/src/: lib.rs
